--- a/public/layer01/css/menu.css
+++ b/public/layer01/css/menu.css
@@ -96,6 +96,26 @@ button {
 	width: fit-content;
 }
 
+.NM {
+	color: #88bff0;
+}
+
+.HD {
+	color: #eedaa1;
+}
+
+.HR {
+	color: #f79595;
+}
+
+.DT {
+	color: #ac92e6;
+}
+
+.EZ {
+	color: #a4d293;
+}
+
 /* MENU */
 
 #menu {
