Redo examples for forms for qualifiers

--- a/views/layer01/qualifiers.ejs
+++ b/views/layer01/qualifiers.ejs
@@ -17,14 +17,14 @@
 				<div id="referee_div">
 					<form id="r_lobby_add" method="POST" action="">
 						<h3>Type in the IDs of the lobbies you would like to ref! (comma separated)</h3>
-						<h5>(Example: Q3, Q4, Q17, Q18)</h5>
+						<h5>(Example: ONION3, ONION4, ONION18)</h5>
 						<input type="hidden" name="act" class="act" value="ref_add">
 						<input type="text" name="r_lobbies" class="r_lobbies">
 						<input type="submit" id="submit" value="Ref lobbies!">
 					</form>
 					<form id="r_lobby_rem" method="POST" action="">
 						<h3>Or if you would like to drop lobbies, use this: (comma separated)</h3>
-						<h5>(Example: Q3, Q4, Q17, Q18)</h5>
+						<h5>(Example: ONION3, ONION4, ONION18)</h5>
 						<input type="hidden" name="act" class="act" value="ref_rem">
 						<input type="text" name="r_lobbies" class="r_lobbies">
 						<input type="submit" id="submit" value="Drop lobbies!">
@@ -35,7 +35,7 @@
 				<div id="player_div">
 					<form id="p_lobby_join" method="POST" action="">
 						<h3>Type in the ID of the lobby you'd like to play in!</h3>
-						<h5>(Example: Q3)</h5>
+						<h5>(Example: ONION3)</h5>
 						<input type="hidden" name="act" class="act" value="player_join">
 						<input type="text" name="p_lobby" class="p_lobby">
 						<input type="submit" id="submit" value="Join lobby!">
