Make time in qualifiers lobbies cleaner

--- a/views/layer01/qualifiers.ejs
+++ b/views/layer01/qualifiers.ejs
@@ -46,7 +46,7 @@
 				<tbody>
 					<tr class="legend">
 						<td>ID</td>
-						<td>SCHEDULE</td>
+						<td>SCHEDULE (UTC+0)</td>
 						<td>REFEREE</td>
 						<td>PLAYERS</td>
 					</tr>
@@ -56,7 +56,7 @@
 							<td><div class="schedule">
 								<% let date = lobbies[i].schedule %>
 								<% function a(b) {return b>9?b:"0".concat(b)} %>
-								<%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%> UTC+0 %>
+								<%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%> %>
 							</div></td>
 							<td><div class="referee">
 								<% if (lobbies[i].referee) { %>
