Fix DT BPM, add mappack download, qualifiers css tweaks

--- a/public/layer01/css/playlists.css
+++ b/public/layer01/css/playlists.css
@@ -22,6 +22,14 @@ td:last-child {
 	margin: auto;
 }
 
+.playlist_name {
+	margin-bottom: 5px;
+}
+
+.playlist_top {
+	margin-bottom: 20px;
+}
+
 .legend {
 	font-size: 18px;
 	border-bottom: 1px solid;
