Get and store qualifiers mps & other smol changes

--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -29,7 +29,7 @@
 					<% if (user) { %>
 						<a href="player-registration" class="button" id="player-regs">
 								<img src="./images/form.png">
-							Player registration form
+							Player registration form (CLOSED)
 						</a>
 						<a href="staff-registration" class="button" id="staff-regs">
 							<img src="./images/form.png">
@@ -37,7 +37,7 @@
 						</a>
 					<% } else { %>
 						<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/layer01/login" class="button" id="login">
-							Please login here before registering as a player or as staff :3
+							Login <!-- Please login here before registering as a player or as staff :3 -->
 						</a>
 					<% } %>
 				</div>
