--- a/views/layer01/staff-registration.ejs
+++ b/views/layer01/staff-registration.ejs
@@ -22,8 +22,8 @@
 				<div class="form_part" id="div_roles">
 					<h3>What would you like to do here?</h3>
 					<h5>If you intend on both staffing and playing in this tournament, please check the rules first!</h5>
-					<label for="pooler"><input type="checkbox" name="pooler" id="pooler">Pooler</label>
-					<label for="referee"><input type="checkbox" name="referee" id="referee">Referee</label>
+					<!-- <label for="pooler"><input type="checkbox" name="pooler" id="pooler">Pooler</label>
+					<label for="referee"><input type="checkbox" name="referee" id="referee">Referee</label> -->
 					<label for="streamer"><input type="checkbox" name="streamer" id="streamer">Streamer</label>
 					<label for="commentator"><input type="checkbox" name="commentator" id="commentator">Commentator</label>
 				</div>
