--- a/views/layer01/partials/menu.ejs
+++ b/views/layer01/partials/menu.ejs
@@ -10,11 +10,10 @@
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/rules">RULES</a></li>
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/players">PLAYERS</a></li>
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/playlists">PLAYLISTS</a></li>
+	<li class="menu-list-element"><a class="menu-button" href="/layer01/matches">MATCHES</a></li>
 	<% if (user && user.roles.admin) { %>
 		<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers">QUALIFIERS LOBBIES</a></li>
-	<% } %>
-	<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers-results">QUALIFIERS RESULTS</a></li>
-	<% if (user && user.roles.referee) { %>
 		<li class="menu-list-element"><a class="menu-button" href="/layer01/referee">REFEREE HELPER</a></li>
 	<% } %>
+	<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers-results">QUALIFIERS RESULTS</a></li>
 </ul>
