--- a/views/layer01/matches.ejs
+++ b/views/layer01/matches.ejs
@@ -52,50 +52,52 @@
 				</div>
 			<% } %>
 
-			<% for (let i = 0; i < brackets.length; i++) { %>
-				<h2><%= brackets[i].name %></h2>
-				<table class="bracket">
-					<tr class="legend">
-						<td>ID</td>
-						<td>SCHEDULE (UTC+0)</td>
-						<td>PLAYER 1</td>
-						<td>SCORE</td>
-						<td>PLAYER 2</td>
-						<td>REFEREE</td>
-						<td>STREAMER</td>
-						<td>MP LINK</td>
-					</tr>
-					<% for (let e = 0; e < brackets[i].matches.length; e++) { %>
-						<% let match = brackets[i].matches[e] %>
-						<tr class="match <%= match.type == 'lb' ? 'lb' : 'wb' %>">
-							<td><div class="id"><%= match.id %></div></td>
-							<td><div class="schedule">
-								<% let date = match.schedule %>
-								<% function a(b) {return b>9?b:"0".concat(b)} %>
-								<%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%>
-							</div></td>
-							<td><div class="player"><a href="https://osu.ppy.sh/users/<%= match.players[0].id %>" target="_blank"><%= match.players[0].username %></a></div></td>
-							<td><div class="scores">
-								<%= match.scores[0] %> - <%= match.scores[1] %>
-							</div></td>
-							<td><div class="player"><a href="https://osu.ppy.sh/users/<%= match.players[1].id %>" target="_blank"><%= match.players[1].username %></a></div></td>
-							<td><div class="referee"> <% if (match.referee) { %>
-								<a href="https://osu.ppy.sh/users/<%= match.referee.id %>" target="_blank"><%= match.referee.name %></a>
-							<% } %> </div></td>
-							<td><div class="streamer"> <% if (match.streamer) { %>
-								<a href="https://osu.ppy.sh/users/<%= match.streamer.id %>" target="_blank"><%= match.streamer.name %></a>
-							<% } %> </div></td>
-							<td><div class="mp_link">
-								<% if (match.mplink) { %>
-									<a href="<%= match.mp_link %>" target="_blank">MP LINK</a>
-								<% } else { %>
-									NONE
-								<% } %>
-							</div></td>
+			<div id="brackets">
+				<% for (let i = 0; i < brackets.length; i++) { %>
+					<h2><%= brackets[i].name %></h2>
+					<table class="bracket">
+						<tr class="legend">
+							<td>ID</td>
+							<td>SCHEDULE (UTC+0)</td>
+							<td>PLAYER 1</td>
+							<td>SCORE</td>
+							<td>PLAYER 2</td>
+							<td>REFEREE</td>
+							<td>STREAMER</td>
+							<td>MP LINK</td>
 						</tr>
-					<% } %>
-				</table>
-			<% } %>
+						<% for (let e = 0; e < brackets[i].matches.length; e++) { %>
+							<% let match = brackets[i].matches[e] %>
+							<tr class="match <%= match.type == 'lb' ? 'lb' : 'wb' %>">
+								<td><div class="id"><%= match.id %></div></td>
+								<td><div class="schedule">
+									<% let date = match.schedule %>
+									<% function a(b) {return b>9?b:"0".concat(b)} %>
+									<%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%>
+								</div></td>
+								<td><div class="player"><a href="https://osu.ppy.sh/users/<%= match.players[0].id %>" target="_blank"><%= match.players[0].username %></a></div></td>
+								<td><div class="scores">
+									<%= match.scores[0] %> - <%= match.scores[1] %>
+								</div></td>
+								<td><div class="player"><a href="https://osu.ppy.sh/users/<%= match.players[1].id %>" target="_blank"><%= match.players[1].username %></a></div></td>
+								<td><div class="referee"> <% if (match.referee) { %>
+									<a href="https://osu.ppy.sh/users/<%= match.referee.id %>" target="_blank"><%= match.referee.name %></a>
+								<% } %> </div></td>
+								<td><div class="streamer"> <% if (match.streamer) { %>
+									<a href="https://osu.ppy.sh/users/<%= match.streamer.id %>" target="_blank"><%= match.streamer.name %></a>
+								<% } %> </div></td>
+								<td><div class="mp_link">
+									<% if (match.mplink) { %>
+										<a href="<%= match.mp_link %>" target="_blank">MP LINK</a>
+									<% } else { %>
+										NONE
+									<% } %>
+								</div></td>
+							</tr>
+						<% } %>
+					</table>
+				<% } %>
+			</div>
 
 			<% if (user && user.roles.admin) { %>
 				<form id="c_bracket" method="POST" action="">
