Clarify a thing in rules regarding TB selection

--- a/views/layer01/rules.ejs
+++ b/views/layer01/rules.ejs
@@ -80,7 +80,7 @@
 					<p>Like for Qualifiers, HR and DT maps may be played with an additional HD mod<br>Therefore those maps will be put as "Freemod" by the referee, but for example, HR maps will still require HRNF from the player, and any mod other than HR, HD and NF will not be accepted<br>The HD multiplier for those maps will be nullified; a 1.06 divider will be applied to scores with an HD mod on HR and DT maps by the referee</p>
 					<p>Once both players are ready, they will start by DMing their referee which playlist they choose to ban<br>The one remaining playlist will be played<br>If the two players ban the same playlist, the referee will `!roll 2` in order to determine which playlist will be played</p>
 					<p>Once the playlist of the match is determined, both players will use the `!roll` command<br>Winner of the roll decides of the pick order, loser of the roll decides of the ban order</p>
-					<p>When both players are at match point, they will DM their referee their third and last ban<br>The one remaining map will be played<br>If the two players ban the same map, the referee will `!roll 2` in order to determine which map will be played</p>
+					<p>When both players are at match point, they will DM their referee their third and last ban<br>Note that ban rules (such as double banning) do NOT apply to this third ban<br>The one remaining map will be played<br>If the two players ban the same map, the referee will `!roll 2` in order to determine which map will be played</p>
 				</div>
 			</div>
 		</div>
