--- a/views/layer01/matches.ejs
+++ b/views/layer01/matches.ejs
@@ -52,6 +52,25 @@
 				</div>
 			<% } %>
 
+			<% if (user && user.roles.commentator) { %>
+				<div class="staff" id="commentator_div">
+					<form id="sc_match_add" method="POST" action="">
+						<h3>Type in the IDs of the matches you would like to commentate! (comma separated)</h3>
+						<h5>(Example: 1, 3, 4)</h5>
+						<input type="hidden" name="act" class="act" value="com_add">
+						<input type="text" name="matches" class="matches">
+						<input type="submit" id="submit" value="Commentate matches!">
+					</form>
+					<form id="s_match_rem" method="POST" action="">
+						<h3>Or if you would like to drop matches, use this: (comma separated)</h3>
+						<h5>(Example: 6, 9)</h5>
+						<input type="hidden" name="act" class="act" value="com_rem">
+						<input type="text" name="matches" class="matches">
+						<input type="submit" id="submit" value="Drop matches!">
+					</form>
+				</div>
+			<% } %>
+
 			<div id="brackets">
 				<% for (let i = 0; i < brackets.length; i++) { %>
 					<h2><%= brackets[i].name %></h2>
@@ -64,6 +83,7 @@
 							<td>PLAYER 2</td>
 							<td>REFEREE</td>
 							<td>STREAMER</td>
+							<td>COMMENTATORS</td>
 							<td>MP LINK</td>
 						</tr>
 						<% for (let e = 0; e < brackets[i].matches.length; e++) { %>
@@ -85,6 +105,12 @@
 								<% } %> </div></td>
 								<td><div class="streamer"> <% if (match.streamer) { %>
 									<a href="https://osu.ppy.sh/users/<%= match.streamer.id %>" target="_blank"><%= match.streamer.name %></a>
+								<% } %> </div></td>
+								<td><div class="commentators"> <% for (let e = 0; e < match.commentators.length; e++) { %>
+									<% let commentator = match.commentators[e] %>
+									<% if (commentator) { %>
+										<div class="commentator"><a href="https://osu.ppy.sh/users/<%= commentator.id %>" target="_blank"><%= commentator.name %></a></div>
+									<% } %>
 								<% } %> </div></td>
 								<td><div class="mp_link">
 									<% if (match.mplink) { %>
