--- a/public/layer01/css/matches.css
+++ b/public/layer01/css/matches.css
@@ -57,6 +57,10 @@ td:last-child {
 	color: #000 !important;
 }
 
+.lb {
+	background-color: #411411;
+}
+
 .c_bracket_name {
 	margin-bottom: 10px;
 }
