--- a/views/layer01/matches.ejs
+++ b/views/layer01/matches.ejs
@@ -16,17 +16,17 @@
 
 			<% if (user && user.roles.referee) { %>
 				<div class="staff" id="referee_div">
-					<form id="r_match_add" method="POST" action="">
+					<form id="r_match_add" method="POST" action="matches/staff/add">
 						<h3>Type in the IDs of the matches you would like to ref! (comma separated)</h3>
 						<h5>(Example: 1, 3, 4)</h5>
-						<input type="hidden" name="act" class="act" value="ref_add">
+						<input type="hidden" name="act" class="act" value="ref">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Ref matches!">
 					</form>
-					<form id="r_match_rem" method="POST" action="">
+					<form id="r_match_rem" method="POST" action="matches/staff/remove">
 						<h3>Or if you would like to drop matches, use this: (comma separated)</h3>
 						<h5>(Example: 6, 9)</h5>
-						<input type="hidden" name="act" class="act" value="ref_rem">
+						<input type="hidden" name="act" class="act" value="ref">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Drop matches!">
 					</form>
@@ -35,17 +35,17 @@
 
 			<% if (user && user.roles.streamer) { %>
 				<div class="staff" id="streamer_div">
-					<form id="s_match_add" method="POST" action="">
+					<form id="s_match_add" method="POST" action="matches/staff/add">
 						<h3>Type in the IDs of the matches you would like to stream! (comma separated)</h3>
 						<h5>(Example: 1, 3, 4)</h5>
-						<input type="hidden" name="act" class="act" value="str_add">
+						<input type="hidden" name="act" class="act" value="str">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Stream matches!">
 					</form>
-					<form id="s_match_rem" method="POST" action="">
+					<form id="s_match_rem" method="POST" action="matches/staff/remove">
 						<h3>Or if you would like to drop matches, use this: (comma separated)</h3>
 						<h5>(Example: 6, 9)</h5>
-						<input type="hidden" name="act" class="act" value="str_rem">
+						<input type="hidden" name="act" class="act" value="str">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Drop matches!">
 					</form>
@@ -54,17 +54,17 @@
 
 			<% if (user && user.roles.commentator) { %>
 				<div class="staff" id="commentator_div">
-					<form id="sc_match_add" method="POST" action="">
+					<form id="sc_match_add" method="POST" action="matches/staff/add">
 						<h3>Type in the IDs of the matches you would like to commentate! (comma separated)</h3>
 						<h5>(Example: 1, 3, 4)</h5>
-						<input type="hidden" name="act" class="act" value="com_add">
+						<input type="hidden" name="act" class="act" value="com">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Commentate matches!">
 					</form>
-					<form id="s_match_rem" method="POST" action="">
+					<form id="s_match_rem" method="POST" action="matches/staff/remove">
 						<h3>Or if you would like to drop matches, use this: (comma separated)</h3>
 						<h5>(Example: 6, 9)</h5>
-						<input type="hidden" name="act" class="act" value="com_rem">
+						<input type="hidden" name="act" class="act" value="com">
 						<input type="text" name="matches" class="matches">
 						<input type="submit" id="submit" value="Drop matches!">
 					</form>
@@ -126,8 +126,7 @@
 			</div>
 
 			<% if (user && user.roles.admin) { %>
-				<form id="c_bracket" method="POST" action="">
-					<input type="hidden" name="act" class="act" value="create">
+				<form id="c_bracket" method="POST" action="matches/create">
 					<label for="c_bracket_name">Bracket<input type="text" name="c_bracket_name" class="c_bracket_name"></label>
 					<div class="c_match" id="c_0">
 						<label for="c_id">ID<input type="text" name="c_id" class="c_id" minlength="1"></label>
