Fix CSS on 404s and error pages

--- a/views/history/fourofour.ejs
+++ b/views/history/fourofour.ejs
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Taevas' place</title>
-		<link rel="stylesheet" type="text/css" href="./css/misc.css">
+		<link rel="stylesheet" type="text/css" href="/history/css/misc.css">
 	</head>
 	<body>
 		<div id="message">
 			<h1>404</h1>
 			<h2>This part of the website does not exist</h2>
-			<a href="/">Click here to come back to the main page</a>
-			<img src="./images/lainSleep.png" style="margin: 20px auto 0 auto;">
+			<a href="/history">Click here to come back to the main page</a>
+			<img src="/history/images/lainSleep.png" style="margin: 20px auto 0 auto;">
 		</div>
 	</body>
 </html>
