--- a/views/layer01/error.ejs
+++ b/views/layer01/error.ejs
@@ -11,7 +11,7 @@
 			<h1><%= status.code %></h1>
 			<h2><%= status.reason %></h2>
 			<a href="/layer01">Click here to come back to LAYER01</a>
-			<img src="./images/astolfoSleep.png" style="margin: 20px auto 0 auto;">
+			<img src="/layer01/images/astolfoSleep.png" style="margin: 20px auto 0 auto;">
 		</div>
 	</body>
 </html>
