Database change: Tournament History's roles

--- a/views/history/partials/menu.ejs
+++ b/views/history/partials/menu.ejs
@@ -12,7 +12,7 @@
 			</ul>
 		</div>
 	</li>
-	<% if (user && user.roles.admin) { %>
+	<% if (roles.admin) { %>
 		<script type="text/javascript" src="./js/admin.js"></script>
 		<li class="menu-list-element dropdown">
 			<a href="javascript:void(0)" class="menu-button dropbtn" onclick="stay(this)">Admin</a>
