--- a/views/layer01/playlists.ejs
+++ b/views/layer01/playlists.ejs
@@ -58,7 +58,7 @@
 					</div>
 				<% } %>
 			</div>
-			<% if (user && user.roles.admin) { %>
+			<% if (roles.admin) { %>
 				<form id="c_pool" method="POST" action="">
 					<label for="c_name">Playlist Name<input type="text" name="c_name" class="c_name"></label>
 					<label for="c_mappack">Mappack Link<input type="text" name="c_mappack" class="c_mappack"></label>
