--- a/views/layer01/qualifiers.ejs
+++ b/views/layer01/qualifiers.ejs
@@ -13,7 +13,7 @@
 			<% let date = new Date() %>
 			<% function a(b) {return b>9?b:"0".concat(b)} %>
 			<h4 id="time"><%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%> UTC+0</h4>
-			<% if (user && user.roles.referee) { %>
+			<% if (roles.referee) { %>
 				<div id="referee_div">
 					<form id="r_lobby_add" method="POST" action="qualifiers/referee/add">
 						<h3>Type in the IDs of the lobbies you would like to ref! (comma separated)</h3>
@@ -29,7 +29,7 @@
 					</form>
 				</div>
 			<% } %>
-			<% if (user && user.roles.player) { %>
+			<% if (roles.player) { %>
 				<div id="player_div">
 					<form id="p_lobby_join" method="POST" action="qualifiers/join">
 						<h3>Type in the ID of the lobby you'd like to play in!</h3>
@@ -72,7 +72,7 @@
 					<% } %>
 				</tbody>
 			</table>
-			<% if (user && user.roles.admin) { %>
+			<% if (roles.admin) { %>
 				<form id="c_lobby" method="POST" action="qualifiers/create">
 					<label for="c_prefix">Prefix<input type="text" name="c_prefix" class="c_prefix"></label>
 					<label for="c_min">First number<input type="number" name="c_min" class="c_min"></label>
