--- a/views/root/login.ejs
+++ b/views/root/login.ejs
@@ -3,13 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>what</title>
+		<title>taevas.xyz | login</title>
 		<link rel="stylesheet" type="text/css" href="/root/css/misc.css">
 	</head>
 	<body>
 		<div id="message">
-			<h1>404</h1>
-			<h2>inexistant</h2>
+			<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/login">login</a>
 			<a href="/">root</a>
 		</div>
 	</body>
